Working on a bit of styling

--- a/screen.less
+++ b/screen.less
@@ -1,10 +1,55 @@
-#main {
-    width: 960px;
-    margin: 0 auto;
-    font-family: helvetica, arial, freesans, clean, sans-serif;
+// Reset ---------------------------------------------------
+
+body {
+    margin: 0;
+    padding: 0;
 }
 
-h1 {
-    font-family: "Gill Sans";
-    font-weight: lighter;
+// Generic -------------------------------------------------
+
+body {
+    color: white;
+    background-color: #666;
 }
+
+.content {
+  width: 960px;
+  margin: 0 auto;
+  font-family: helvetica, arial, freesans, clean, sans-serif;
+}
+
+h1, h2 {
+  font-family: "Gill Sans";
+  font-weight: lighter;
+}
+
+// Sections --------------------------------------------------
+
+#header {
+    margin: 0;
+    padding: 10px 0;
+    background-color: black;
+
+    h2 {
+        margin: 0;
+    }
+}
+
+#main {
+  color: black;
+  background-color: white;
+  padding: 20px 0;
+
+  h2 {
+      color: #666;
+  }
+
+  p {
+      line-height: 1.3em;
+  }
+}
+
+#footer {
+    padding: 20px 0;
+}
+
