--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html> 
-<html> 
+<html>
   <head> 
     <meta charset='utf-8'> 
+    
     <title>Bigtop</title>
-    <link href="/screen.css" media="screen" rel="stylesheet" type="text/css" /> 
- </head> 
-<body> 
-  <div id="header"> 
-    <div class="content">
-      <h1>Bigtop<h1>
+    
+    <link href="/static/styles/screen.css" media="screen" rel="stylesheet" type="text/css" />
+    
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head> 
+  
+  <body> 
+    <div id="container">
+      <header> 
+        <h1><a href="/">Bigtop</a></h1>
+      </header>
+    
+      <article> 
+        {{ content }}
+      </article>
+
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <!-- <li><a href="/docs">Documentation</a></li> -->
+          <li><a href="http://api.bigtopweb.com">API reference</a></li>
+          <li><a href="https://github.com/bigtop/bigtop">Github page</a></li>
+          <li><a href="http://repo.untyped.com/bigtop">Maven repo</a></li>
+          <li><a href="/acknowledgements.html">Acknowledgements</a></li>
+        </ul>
+      </nav>
     </div>
-  </div>
-  <div id="main"> 
-    <div class="content">
-      {{ content }}
-    </div>
-  </div>
-  <div id="footer">
-    <div class="content">
-      Bigtop is brought to you by <a href="http://www.untyped.com/">Untyped</a>
-    </div>
-  </div>
-</body>
+    
+      <footer>
+        <p>Copyright 2011 <a href="http://www.untyped.com/">Untyped</a>.</p>
+      </footer>
+  </body>
 </html>
