--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <head> 
     <meta charset='utf-8'> 
     
-    <title>Bigtop</title>
+    <title>{{ page.title }}</title>
     
     <link href="/static/styles/screen.css" media="screen" rel="stylesheet" type="text/css" />
     
@@ -30,7 +30,7 @@
   <body> 
     <div id="container">
       <header> 
-        <h1><a href="/">Bigtop</a></h1>
+        <h1><a href="/">{{ page.title }}</a></h1>
       </header>
     
       <article> 
@@ -38,7 +38,7 @@
       </article>
 
       <nav>
-        <ul>
+        <ul class="global">
           <li><a href="/">Home</a></li>
           <!-- <li><a href="/docs">Documentation</a></li> -->
           <li><a href="http://api.bigtopweb.com">API reference</a></li>
@@ -52,5 +52,9 @@
       <footer>
         <p>Copyright 2011 <a href="http://www.untyped.com/">Untyped</a>.</p>
       </footer>
+    </div>
+    
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+    <script src="/static/scripts/nav.js"></script>
   </body>
 </html>
