Manual page for Core; tweaks to acknowledgements; tweaks to nav.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,8 @@
       <nav>
         <ul class="global">
           <li><a href="/">Home</a></li>
-          <!-- <li><a href="/docs">Documentation</a></li> -->
+          <li><a href="/core/">Bigtop Core</a></li>
+          <li><a href="/routes/">Bigtop Routes</a></li>
           <li><a href="http://api.bigtopweb.com">API reference</a></li>
           <li><a href="https://github.com/bigtop/bigtop">Github page</a></li>
           <li><a href="http://repo.untyped.com/bigtop">Maven repo</a></li>
