--- a/static/styles/screen.less
+++ b/static/styles/screen.less
@@ -1,6 +1,7 @@
 @import 'syntax.less';
 
 @page-width: 780px;
+@page-min-height: 30em;
 @nav-width: 180px;
 
 @border-color: #eee;
@@ -48,7 +49,7 @@ h1 {
   font-size: 36px;
   line-height: 40px;
   text-transform: uppercase;
-  
+
   a {
     text-decoration: none;
     color: #000;
@@ -82,6 +83,7 @@ a {
 #container {
   position: relative;
   width: @page-width;
+  min-height: @page-min-height;
   margin: 0 auto;
   padding: 0 10px;
   border-left: 5px solid @border-color;
@@ -108,7 +110,7 @@ footer {
   padding: 20px 0;
   text-align: center;
   color: #aaa;
-  
+
   a {
     color: #99c;
   }
@@ -124,13 +126,13 @@ nav {
   margin-left: @page-width - @nav-width + 15px;
   padding: 180px 0 0 0;
   background: transparent url(images/bigtop-logo.png) no-repeat right top;
-  
+
   ul {
     margin: 0 0 40px;
     padding: 0;
     list-style-type: none;
   }
-  
+
   a {
     display: block;
     padding: 0 10px;
@@ -139,13 +141,13 @@ nav {
     color: #000;
     text-shadow: 1px 1px 0 rgba(0,0,0,.2);
   }
-  
+
   .nav1 { border-right: 5px solid @bigtop-color1; &.highlight, &:hover { background: lighten(@bigtop-color1, 10%); } }
   .nav2 { border-right: 5px solid @bigtop-color2; &.highlight, &:hover { background: lighten(@bigtop-color2, 20%); } }
   .nav3 { border-right: 5px solid @bigtop-color3; &.highlight, &:hover { background: lighten(@bigtop-color3, 20%); } }
   .nav4 { border-right: 5px solid @bigtop-color4; &.highlight, &:hover { background: lighten(@bigtop-color4, 25%); } }
   .nav5 { border-right: 5px solid @bigtop-color5; &.highlight, &:hover { background: lighten(@bigtop-color5, 10%); } }
-  
+
   li a { border-right: 5px solid @bigtop-color1; }
   li:nth-child(1n) a { .nav1 }
   li:nth-child(2n) a { .nav2 }
